sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: '(' expected but identifier found.
      if plusPetit(v, i-1) {
         ^AlgInsertionSort:15: error: illegal start of simple expression
    }
    ^