sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var v:Int = i
    for (j <- 1 to v) {
      
      if plusPetit(v, i-1) {
        
        
        
      }
      
    }
    
  }
  
  
}